tests/macros/unknown/kind.rs
fn main() {
    let q = requestty::questions![unknown {}];
}
